Education, Intro and slight Font change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
 /*.single-about-txt*/
 .single-about-txt h3 {
     font-size:18px;
-    color: #3c4258;
+    color: #050505;
     text-transform: initial;
     line-height: 1.8;
 }
